--- a/evpn.yaml
+++ b/evpn.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: default
 spec:
   config: |
-    {"cniVersion":"0.3.1","name":"vxlan1","type":"bridge","bridge":"vxlan-br","promiscMode":true,"vlanTrunk": [{"minID": 2, "maxID": 4094}],"ipam":{}}
+    {"cniVersion":"0.3.1","name":"vxlan-all","type":"bridge","bridge":"vxlan-br","promiscMode":true,"vlanTrunk": [{"minID": 2, "maxID": 4094}],"ipam":{}}
 ---
 apiVersion: v1
 kind: ConfigMap
